test/scc/pp/errors/010.a
010.t:1:10: error: ISO C requires whitespaces after the macro name